<resources>
    <!--    MAIN    -->
    <string name="app_name">App</string>
    <string name="subscribeBtn">Подписаться</string>
    <string name="search_message">Введите адрес для поиска</string>
    <string name="search_example">https://www.avito.ru/moskva/vakansii/tag/barmen</string>

    <!--    SEARCh ACTIVITY-->
    <string name="headingSearchingOnStart">Нажми СТОП чтобы закончить отслеживание</string>
    <string name="headingSearchingOnStop">Нажми СТАРТ чтобы начать отслеживание</string>
    <string name="stobBtn">Стоп</string>
    <string name="startBtn">Старт</string>
    <string name="stepOneText">Шаг 1: Открыть авито и скопировать желаемый адрес</string>
    <string name="openSite">Открыть Авито</string>
    <string name="stepTwoText">Шаг 2: Выбрать рубрику и критерии поиска (город и т.д.)</string>
    <string name="stepThreeText">Шаг 3: Скопировать адрес выбранного запроса (пример: https://www.avito.ru/moskva/vakansii/tag/kladovschik)</string>
    <string name="stepFourText">Шаг 4: Вставить ссылку и нажать на \"подписаться\"</string>
    <string name="textOnDelete">The ad was deleted</string>
    <string name="channel_name">Chanel One</string>
    <string name="channel_description">Channel One Description</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hintSubscriptionName">Computers...</string>
    <string name="openBtn">Open</string>
    <string name="removeBtn">Remove</string>
    <string name="notification_title">Foreground Service is running</string>
    <string name="notification_message">Scanning ads...</string>
    <string name="ticker_text">ticker text replace</string>
</resources>